@@ -2,7 +2,7 @@
   title: "HTTP"
   description: >
     HTTP module
-  release: beta
+  release: ga
   settings: ["ssl"]
   fields:
     - name: http
