@@ -233,6 +233,7 @@ https://github.com/elastic/beats/compare/v6.0.0-beta2...master[Check the HEAD di
 - Add statefulset support to Kubernetes module. {pull}6236[6236]
 - Refactor prometheus endpoint parsing to look similar to upstream prometheus {pull}6332[6332]
 - Update prometheus dependencies to latest {pull}6333[6333]
+- Making the http/json metricset GA. {pull}6471[6471]
 
 *Packetbeat*
 
